<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kazu.recordmanager.DetailActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/recordName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attendanceScore"
        android:layout_width="57dp"
        android:layout_height="38dp"
        android:layout_marginBottom="101dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/freeSpace"
        app:layout_constraintStart_toEndOf="@+id/minus" />

    <EditText
        android:id="@+id/unitScore"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/unit"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginBottom="74dp"
        android:layout_marginTop="78dp"
        android:entries="@array/list"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/minus"
        app:layout_constraintEnd_toStartOf="@+id/attendanceScore"
        app:layout_constraintStart_toStartOf="@+id/attendanceScore"
        app:layout_constraintTop_toTopOf="@+id/unit" />

    <TextView
        android:id="@+id/attendance"
        android:layout_width="85dp"
        android:layout_height="44dp"
        android:layout_marginBottom="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="83dp"
        android:gravity="center"
        android:text="@string/textAttendance"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintBottom_toBottomOf="@+id/memo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="225dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:elevation="0dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/recordName"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/plus"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="69dp"
        android:layout_marginStart="69dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/attendanceScore"
        app:layout_constraintEnd_toEndOf="@+id/freeSpace"
        app:layout_constraintStart_toStartOf="@+id/attendanceScore"
        app:layout_constraintTop_toTopOf="@+id/attendance" />

    <Button
        android:id="@+id/minus"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/attendanceScore"
        app:layout_constraintEnd_toEndOf="@+id/recordName"
        app:layout_constraintStart_toEndOf="@+id/attendance"
        app:layout_constraintTop_toTopOf="@+id/attendanceScore" />

    <TextView
        android:id="@+id/memo"
        android:layout_width="79dp"
        android:layout_height="49dp"
        android:layout_marginBottom="221dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/memo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="95dp"
        android:text="@string/unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/freeSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/delRecord"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
